tooldef/org.eclipse.escet.tooldef.tests/tests/tchecker/return_value_type.tooldef
//////////////////////////////////////////////////////////////////////////////
// Copyright (c) 2010, 2020 Contributors to the Eclipse Foundation
//
// See the NOTICE file(s) distributed with this work for additional
// information regarding copyright ownership.
//
// This program and the accompanying materials are made available
// under the terms of the MIT License which is available at
// https://opensource.org/licenses/MIT
//
// SPDX-License-Identifier: MIT
//////////////////////////////////////////////////////////////////////////////

tool int a():
    return 5;
end

tool int, bool b():
    return 5, true;
end

tool int, bool c():
    return 5, 6;
end
